[gd_scene load_steps=8 format=3 uid="uid://c8k7kht3l5xnr"]

[ext_resource type="Script" path="res://scripts/GameUI.gd" id="1_b5k7h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.15, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.4, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.3, 0.6, 0.3, 0.9)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_1"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_3")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_2")

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 16
font_color = Color(0.9, 0.9, 0.9, 1)
outline_size = 1
outline_color = Color(0.1, 0.1, 0.1, 0.8)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 18
font_color = Color(1, 1, 0.9, 1)
outline_size = 1
outline_color = Color(0.1, 0.1, 0.1, 0.8)

[node name="UI" type="Control" groups=["ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_b5k7h")

[node name="HUDPanel" type="Panel" parent="."]
layout_mode = 0
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="HUDPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthContainer" type="HBoxContainer" parent="HUDPanel/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="HUDPanel/VBoxContainer/HealthContainer"]
layout_mode = 2
text = "HP"
label_settings = SubResource("LabelSettings_1")

[node name="HealthBar" type="ProgressBar" parent="HUDPanel/VBoxContainer/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_1")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthValue" type="Label" parent="HUDPanel/VBoxContainer/HealthContainer"]
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_1")

[node name="AmmoContainer" type="HBoxContainer" parent="HUDPanel/VBoxContainer"]
layout_mode = 2

[node name="AmmoLabel" type="Label" parent="HUDPanel/VBoxContainer/AmmoContainer"]
layout_mode = 2
text = "AMMO"
label_settings = SubResource("LabelSettings_1")

[node name="AmmoValue" type="Label" parent="HUDPanel/VBoxContainer/AmmoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "30"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 2

[node name="ScoreContainer" type="HBoxContainer" parent="HUDPanel/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="HUDPanel/VBoxContainer/ScoreContainer"]
layout_mode = 2
text = "SCORE"
label_settings = SubResource("LabelSettings_1")

[node name="ScoreValue" type="Label" parent="HUDPanel/VBoxContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_2")
horizontal_alignment = 2

[node name="WeaponIndicator" type="Panel" parent="."]
layout_mode = 0
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="WeaponContainer" type="VBoxContainer" parent="WeaponIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="WeaponLabel" type="Label" parent="WeaponIndicator/WeaponContainer"]
layout_mode = 2
text = "ASSAULT RIFLE"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="WeaponHint" type="Label" parent="WeaponIndicator/WeaponContainer"]
layout_mode = 2
text = "[2] to switch"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="XPIndicator" type="Panel" parent="."]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="XPContainer" type="VBoxContainer" parent="XPIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="XPLabel" type="Label" parent="XPIndicator/XPContainer"]
layout_mode = 2
text = "Level 1 - XP: 0/100"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="XPBar" type="ProgressBar" parent="XPIndicator/XPContainer"]
layout_mode = 2
theme = SubResource("Theme_1")
max_value = 100.0
show_percentage = false

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0

[node name="CrosshairMain" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -1.0
offset_right = 12.0
offset_bottom = 1.0
color = Color(0.9, 0.9, 0.9, 0.8)

[node name="CrosshairV" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -12.0
offset_right = 1.0
offset_bottom = 12.0
color = Color(0.9, 0.9, 0.9, 0.8)

[node name="CrosshairCenter" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="CrosshairOutline" type="Control" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -13.0
offset_right = 13.0
offset_bottom = 13.0

[node name="OutlineH" type="ColorRect" parent="Crosshair/CrosshairOutline"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -2.0
offset_right = 13.0
offset_bottom = 2.0
color = Color(0, 0, 0, 0.4)

[node name="OutlineV" type="ColorRect" parent="Crosshair/CrosshairOutline"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -13.0
offset_right = 2.0
offset_bottom = 13.0
color = Color(0, 0, 0, 0.4)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -20.0

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Health: 100"

[node name="AmmoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ammo: 30"

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"
